k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cesi-shop
  labels:
    name: cesi-shop
    app: cesi-collector-shop
