k8s/base/ingress-minio.yaml
# Ingress séparé pour le proxy MinIO (rewrite /api/v1/media/files/xxx -> /xxx)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cesi-shop-minio-ingress
  namespace: cesi-shop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: cesi-shop.local
    http:
      paths:
      - path: /api/v1/media/files(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio
            port:
              number: 9000
